# auth_project

./: README.md
auth_project/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  constants.py  docker-compose.yml  manage.py  pyproject.toml
auth_project/apps/: logger.py  utils.py
auth_project/apps/access/: apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
auth_project/apps/access/migrations/: 0001_initial.py
auth_project/apps/auth_core/: apps.py  constants.py  middleware.py  models.py  permissions.py  tokens.py  urls.py  views.py
auth_project/apps/auth_core/migrations/: 0001_initial.py
auth_project/apps/mock_views/: apps.py  constants.py  urls.py  views.py
auth_project/apps/users/: apps.py  constants.py  models.py  serializers.py  services.py  urls.py  views.py
auth_project/apps/users/migrations/: 0001_initial.py
auth_project/config/: settings.py  urls.py  wsgi.py
auth_project/fixtures/: initial_data.json
auth_project/tests/: conftest.py  test_access_views.py  test_auth_views.py  test_mock_views.py  test_permissions.py  test_serializers.py  test_tokens.py  test_users_service.py  test_users_views.py  test_utils.py
